--- a/playlists-http.cabal
+++ b/playlists-http.cabal
@@ -1,15 +1,16 @@
 name:          playlists-http
-version:       0.1.0.0
+version:       0.1.1.0
 synopsis:      Library to glue together playlists and http-client
 homepage:      https://github.com/pjones/playlists-http
 license:       BSD3
 license-file:  LICENSE
 author:        Peter Jones <pjones@devalot.com>
 maintainer:    Peter Jones <pjones@devalot.com>
-copyright:     Copyright (c) 2016 Peter Jones
+copyright:     Copyright (c) 2016,2017 Peter Jones
 category:      Text
 build-type:    Simple
 cabal-version: >= 1.18
+tested-with:   GHC==7.10.3, GHC==8.0.1
 description:   Simple library for resolving playlists using http-client.
 
 --------------------------------------------------------------------------------
