--- a/playlists-http.cabal
+++ b/playlists-http.cabal
@@ -52,12 +52,12 @@ library
   build-depends: attoparsec   >= 0.10  && < 1.0
                , base         >= 4.6   && < 5
                , bytestring   >= 0.10  && < 1.0
-               , either       >= 4.4   && < 4.5
                , exceptions   >= 0.8   && < 0.9
                , http-client  >= 0.4   && < 0.6
                , mtl          >= 2.2   && < 2.3
                , playlists    >= 0.5   && < 0.6
                , text         >= 0.11  && < 1.3
+               , transformers >= 0.4   && < 0.6
 
 --------------------------------------------------------------------------------
 executable example
