--- a/playlists-http.cabal
+++ b/playlists-http.cabal
@@ -1,16 +1,16 @@
 name:          playlists-http
-version:       0.2.0.0
+version:       0.2.1.0
 synopsis:      Library to glue together playlists and http-client
 homepage:      https://github.com/pjones/playlists-http
 license:       BSD3
 license-file:  LICENSE
 author:        Peter Jones <pjones@devalot.com>
 maintainer:    Peter Jones <pjones@devalot.com>
-copyright:     Copyright (c) 2016,2017 Peter Jones
+copyright:     Copyright (c) 2016,2018 Peter Jones
 category:      Text
 build-type:    Simple
-cabal-version: >= 1.18
-tested-with:   GHC==7.10.3, GHC==8.0.2
+cabal-version: 1.18
+tested-with:   GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1
 description:   Simple library for resolving playlists using http-client.
 
 --------------------------------------------------------------------------------
@@ -52,10 +52,10 @@ library
   build-depends: attoparsec   >= 0.10  && < 1.0
                , base         >= 4.6   && < 5
                , bytestring   >= 0.10  && < 1.0
-               , exceptions   >= 0.8   && < 0.9
+               , exceptions   >= 0.8   && < 0.11
                , http-client  >= 0.4   && < 0.6
                , mtl          >= 2.2   && < 2.3
-               , playlists    >= 0.5   && < 0.6
+               , playlists    >= 0.5   && < 1.0
                , text         >= 0.11  && < 1.3
                , transformers >= 0.4   && < 0.6
 
