--- a/playlists-http.cabal
+++ b/playlists-http.cabal
@@ -1,16 +1,16 @@
 name:          playlists-http
-version:       0.2.1.0
+version:       0.2.1.1
 synopsis:      Library to glue together playlists and http-client
-homepage:      https://github.com/pjones/playlists-http
+homepage:      https://code.devalot.com/open/playlists-http
+bug-reports:   https://code.devalot.com/open/playlists-http/issues
 license:       BSD3
 license-file:  LICENSE
 author:        Peter Jones <pjones@devalot.com>
 maintainer:    Peter Jones <pjones@devalot.com>
-copyright:     Copyright (c) 2016,2018 Peter Jones
+copyright:     Copyright (c) 2016-2019 Peter Jones
 category:      Text
 build-type:    Simple
 cabal-version: 1.18
-tested-with:   GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1
 description:   Simple library for resolving playlists using http-client.
 
 --------------------------------------------------------------------------------
@@ -22,13 +22,7 @@ extra-source-files:
 --------------------------------------------------------------------------------
 source-repository head
   type:     git
-  location: https://github.com/pjones/playlists-http.git
-
---------------------------------------------------------------------------------
-flag maintainer
-  description: Enable settings for the package maintainer.
-  default: False
-  manual: True
+  location: https://code.devalot.com/open/playlists-http.git
 
 --------------------------------------------------------------------------------
 flag build-examples
@@ -46,14 +40,11 @@ library
   hs-source-dirs: src
   ghc-options: -Wall
 
-  if flag(maintainer)
-    ghc-options: -Werror
-
   build-depends: attoparsec   >= 0.10  && < 1.0
                , base         >= 4.6   && < 5
                , bytestring   >= 0.10  && < 1.0
                , exceptions   >= 0.8   && < 0.11
-               , http-client  >= 0.4   && < 0.6
+               , http-client  >= 0.4   && < 0.7
                , mtl          >= 2.2   && < 2.3
                , playlists    >= 0.5   && < 1.0
                , text         >= 0.11  && < 1.3
@@ -65,9 +56,6 @@ executable example
   hs-source-dirs: examples
   main-is: example.hs
   ghc-options: -Wall
-
-  if flag(maintainer)
-    ghc-options: -Werror
 
   if !flag(build-examples)
     buildable: False
