--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,17 @@
 # -*- sh -*-
 
+# Use nixpkgs from nix/sources.json:
+if has jq; then
+  nixpkgs=$(jq --raw-output .nixpkgs.url nix/sources.json)
+  export NIX_PATH=nixpkgs="$nixpkgs"
+fi
+
 # Load in the shell.nix file:
-use nix
+if has lorri; then
+  eval "$(lorri direnv)"
+else
+  use nix
+fi
+
+# Reload if these files change:
+watch_file $(find . -name '*.cabal' -o -name '*.nix')
